--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 21.01.2022 10:35:58</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 21.01.2022 11:10:56</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -93,7 +93,7 @@
 <div class="clear"></div>
 </li>
 <li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>300g Grilovaný hermelín, pečené brambory na bylinkách, lilek, tatarská omáčka <em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="polozka"><span class="poradi">3. </span>300g Grilovaný hermelín, pečené brambory na bylinkách, tatarská omáčka <em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
 <div class="cena">145 Kč</div>
 <div class="clear"></div>
 </li>
