--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 24.01.2022 10:09:18</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 24.01.2022 10:35:30</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -88,7 +88,7 @@
 <div class="clear"></div>
 </li>
 <li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>300g Asijské rissoto s kokosovým mlékem, pečená dýně, restované ořechy, mladý špenát, sezam <em title="Mléko">7</em><em title="Sezamová semena (sezam)">11</em></div>
+<div class="polozka"><span class="poradi">3. </span>300g Asijské rissoto s kokosovým mlékem, pečená dýně, pražené mandle, mladý špenát, sezam <em title="Mléko">7</em><em title="Sezamová semena (sezam)">11</em></div>
 <div class="cena">145 Kč</div>
 <div class="clear"></div>
 </li>
